initial page, please add content if you use that driver :)

--- a/Fglrx.mw
+++ b/Fglrx.mw
@@ -1,219 +1,51 @@
-{{Lowercase title}}
+{{DISPLAYTITLE:radeon}}
 {{InfoBox stack
-|{{InfoBox wikipedia|AMD Catalyst|header=true}}
+|{{InfoBox wikipedia|AMD_Catalyst|header=true}}
 }}
-'''AMD Catalyst''' (previous '''fglrx''': '''F'''ire'''GL''' and '''R'''adeon for '''X''' ) is [[Article description::the proprietary graphics driver for ''older'' AMD/ATI graphic cards.]] The open source alternative is [[radeon]].
-
-{{Warning|These instructions are outdated because ati-drivers and old versions of xorg-server are not available.  Catalyst Drivers are no longer supported by upstream (AMD). More-to-date closed source drivers for new graphics cards are described in the [[AMDGPU-PRO]] article.}}
-
-== Hardware detection ==
-To choose the right driver, first detect the graphics card. You can use [[Hardware detection|lspci]] for this task:
-{{RootCmd|lspci {{!}} grep -i VGA}}
-
-If you have an AGP card, also detect the chipset supporting AGP:
-{{RootCmd|lspci {{!}} grep -i AGP}}
-
-== Hardware support ==
-Development of the Catalyst driver package, including fglrx, has stopped. AMD continues to support the development of the open source [[radeon]] driver module and the newer [[AMDGPU]] driver, with [[AMDGPU-PRO]] as the proprietory closed source extension.
-
-Consequently fglrx will not be updated for use with newer versions of X.org Xserver, as well as Wayland support won't be added.
-
-{{Note|Newer cards starting with GCN1.1 can use [[AMDGPU]]. This includes all Radeon cards starting with Southern Islands (Radeon HD7750-7970, Radeon R7/R9).<br />After the use of fglrx will no longer be possible with current versions of X.org and Wayland, the use of the open source [[radeon]] driver is encouraged for those older cards.}}
-
-{| class="table"
-! Product name
-! Driver version
-! X server (max)
-! Bus
-! Note
-|-
-| Radeon based on GCN
-| {{Partial|[http://packages.gentoo.org/package/x11-drivers/amdgpu amdgpu]}}
-| {{Partial|latest}}
-|
-| Also includes [[Wayland]] support. fglrx is deprecated upstream.  GCN based Radeons are supported by [[AMDGPU]], and older cards by [[radeon]]
-|-
-| Radeon HD 5000 and newer
-| {{Yes|[http://packages.gentoo.org/package/x11-drivers/ati-drivers 15.12]}}
-| {{Yes|1.17}}
-| PCIe
-|
-|-
-| Radeon HD 5000 and newer
-| {{Yes|[http://packages.gentoo.org/package/x11-drivers/ati-drivers 14.12-r4]}}
-| {{Yes|1.16}}
-| PCIe
-|
-|-
-| Radeon HD 5000 and newer
-| {{Yes|[http://packages.gentoo.org/package/x11-drivers/ati-drivers 13.12]}}
-| {{Yes|1.14.49}}
-| PCIe
-|
-|-
-| Radeon HD 5000 and newer
-| {{Partial|[http://packages.gentoo.org/package/x11-drivers/ati-drivers 13.4]}}
-| {{Partial|1.13}}
-| PCIe
-| Broken link, no longer in portage.  Use [[radeon]] driver instead.
-|-
-| Radeon HD 2000 - 4000
-| {{Partial|[http://packages.gentoo.org/package/x11-drivers/ati-drivers 13.1_pre897]}}
-| {{Partial|1.12.49}}
-| PCIe or AGP
-| Broken link. Mask ati-drivers slot 1 and newer, see the instructions under the table.
-|-
-| Radeon HD 1000 and older
-| {{No|&nbsp;}}
-|
-|
-| Use [[radeon]] driver
-|}
-
-; Force legacy driver when you have Radeon HD 2000 - 4000:
-: [[Knowledge Base:Masking a package|Mask]] >=ati-drivers-13.1 and >=xorg-server-1.13:
-: {{RootCmd|echo "# Force legacy driver" >> /etc/portage/package.mask|
-  |echo ">{{=}}x11-base/xorg-server-1.13" >> /etc/portage/package.mask|
-  |echo "x11-drivers/ati-drivers:1" >> /etc/portage/package.mask}}
+AMD Catalyst (fglrx) is the closed source binary driver for AMD/ATI graphic cards. It was mainly written by ATI to support their FireGL cards on Linux workstations and later AMD continued work as an alternative to their open source effort on the [[Radeon]] driver.
 
 == Installation ==
-
+Support for older cards has been dropped in the binary driver, you might want to check if the card is supported: [http://support.amd.com/us/gpudownload/Pages/index.aspx AMD HCL]
 === Kernel ===
-You need [[USB]] support. Kernel version 3 is needed for legacy ATI drivers (i.e. vanilla-sources 3.16.57).
-
-Also you need to activate the following kernel options (using genkernel --menuconfig all in the /usr/src/linux):
-{{KernelBox|
-[*] Enable loadable module support --->
-Processor type and features  --->
-    [*] MTRR (Memory Type Range Register) support
-Bus options (PCI etc.)  --->
-    [*] PCI Express support
-    [*] Message Signaled Interrupts (MSI and MSI-X)
+Any DRM and Radeon related code should be disabled in the kernel or it might interfere with the closed driver.
+{{Kernel|Excluding radeon driver|<pre>
 Device Drivers  --->
-    Graphics support  --->
-        < > Direct Rendering Manager (XFree86 4.1.0 and higher DRI support) --->
-    Graphics support  --->
-        [ ] Support for frame buffer devices -- not necessary? If you set your kernel this way, you will see no console on bootup, so if running headless, you have nothing.
-}}
-
-If you have an AGP card, enable AGP support.  If you want to use the ATI internal AGP support, you must enable kernel support as a module or not at all:
-{{KernelBox|
-Device Drivers  --->
-    Graphics support  --->
-        <*> /dev/agpgart (AGP Support)  --->
-            Choose your AGP driver, e.g.:
-            <*> AMD Opteron/Athlon64 on-CPU GART support
-}}
-
-If you use a hybrid system with Intel integrated video card, you should also activate KMS and Intel driver.  Make sure radeon is disabled.
-{{KernelBox|
-Device Drivers  --->
-    Graphics support  --->
-        <*> Direct Rendering Manager (XFree86 4.1.0 and higher DRI support) --->
-            < > ATI Radeon
-            <*> Intel 8xx/9xx/G3x/G4x/HD Graphics
-                [*]   Enable modesetting on intel by default
-}}
+	Graphics support  --->
+		< > /dev/agpgart (AGP Support)  --->
+		< > Direct Rendering Manager (XFree86 4.1.0 and higher DRI support) --->
+</pre>}}
 
 === Driver ===
-{{VIDEO_CARDS|fglrx}}
+{{VIDEO CARDS|fglrx}}
 
-If you are using a hybrid system, enable intel driver but disable '''sna''' USE flag on it.  See 
-{{Bug|430000}}.
-{{FileBox|filename=/etc/portage/make.conf|<nowiki>
-VIDEO_CARDS="fglrx intel"
-</nowiki>}}
-{{FileBox|filename=/etc/portage/package.use|
-x11-drivers/xf86-video-intel uxa -sna
+=== USE Flags ===
+USE flags for {{Package|x11-drivers/ati-drivers}}
+{{USEflag
+|debug++no+
+|modules+yesyes+
+|multilib
+|pax_kernel
+|qt4
+|static-libs++no+
 }}
 
-
-Check the USE flags of {{Package|x11-drivers/ati-drivers}}:
-{{USEflag|package=x11-drivers/ati-drivers}}
-
-After setting this you want to update your system so the changes take effect:
-{{Emerge|params+=--changed-use --deep|@world}}
-
-=== acpid ===
-Some cards need acpid running to handle events. See the [[ACPI]] article.
-
 == Configuration ==
-
 === Initial setup ===
-This will generate an initial [[xorg.conf]] to {{Path|/root/xorg.conf.new}}:
-{{RootCmd|X -configure}}
-
-Copy the file {{Path|/root/xorg.conf.new}} to the default location:
+This will generate an initial xorg.conf which uses the fglrx driver:
+{{RootCmd|aticonfig --initial}}
+If this command fails without error, copy the file {{Path|/root/xorg.conf.new}} to the default location
 {{RootCmd|cp xorg.conf.new /etc/X11/xorg.conf}}
-
-This will modify an '''existing''' [[xorg.conf]] to use the fglrx driver with a single screen:
-{{RootCmd|aticonfig --initial --input{{=}}/etc/X11/xorg.conf}}
-
-For dual-head configuration use this instead (where the second screen is  [left|right|above|below]):
-{{RootCmd|aticonfig --initial{{=}}dual-head --input{{=}}/etc/X11/xorg.conf --screen-layout{{=}}[left{{!}}right{{!}}above{{!}}below]}}
-
-Set the OpenGL driver to use fglrx:
-{{RootCmd|eselect opengl set ati}}
-
-=== Permissions ===
-If you have the USE flag acl enabled globally and are using ConsoleKit or systemd (i.e you're using a Desktop profile) permissions to video cards will be handled automatically. You can check the permissions using getfacl:
-{{Cmd|getfacl /dev/ati/card0 {{!}} grep larry
-----
-<pre style="color:grey">user:larry:rw-</pre>}}
-
-A broader solution is to add the user you want to be able to access the video card to the video group:
-{{RootCmd|gpasswd -a larry video}}
-
-Note that you will still be able to run X without permission to the fglrx subsystem, but usually not with acceleration enabled.
-
-=== Settings ===
-The most comfortable way for most users is to use {{Path|opt/bin/amdcccle}} as a graphical UI to configure the driver.
+Set the opengl driver to use fglrx
+{{RootCmd|elselect opengl set ati}}
+{{Note|this might already be set by the ebuild}}
 
 == Troubleshooting ==
 * {{Bug|ati-drivers|search=package}}
 
-=== Unexplained segmentation faults and kernel crashes ===
-If you experience unexplained segmentation faults and kernel crashes with this driver and multi-threaded applications such as [[Wine]] set ''UseFastTLS'' in [[xorg.conf]] to either ''0'' or ''1'', but not ''2''.
-
-=== X -configure fails with a no device found error ===
-If X -configure fails, you must create a stub xorg.conf file:
-
-{{FileBox|filename=/etc/X11/xorg.conf|lang=xorg.conf|1=
-Section "Device"
-        Identifier "ATI radeon xxxx"
-        Driver     "fglrx"
-EndSection
-}}
-
-Where "xxxx" is your card model (example: 7770 for HD7770).  Name this file xorg.conf and place it in /etc/X11.
-
-=== aticonfig fails with no suitable screens error ===
-Create stub file as above, run aticonfig command again as:
-# aticonfig --initial -f --input=/etc/X11/xorg.conf
-
-=== Trouble with integrated graphics (A8 or similar) ===
-If you are having trouble getting an on chip integrated graphic core to work (strange visuals/black screen) you may want to double check your BIOS settings.
-In some cases it appears the 'auto' settings don't work correctly, so make sure to explicitly enable the integrated graphics.
-In my case (MSI A88XM-E45 motherboard):
-
-Settings > Advanced > Integrated Graphics Configuration > Initiate Graphics Devices   - I changed this from 'auto' to 'Dual graphics'
-
-Settings > Advanced > Integrated Graphics Configuration > Initiate Graphics Shared Memory - This then appeared which I gave a setting
-
-If you don't find the options above, try to use the "Sideport" only memory option instead of UDMA or Sideport and UDMA.
-
-After this all problems cleared up.
-
 == See also ==
-
-* [[fglrx Quick Switch]] - Quickly switch between this driver and the open [[Radeon]] driver using GRUB 2 without downgrading xorg-server. 
-* {{See also|Hprofile}}
-* {{See also|Uvesafb}}
-* {{See also|ATI FAQ}}
+* [http://www.gentoo.org/doc/en/ati-faq.xml Gentoo Linux ATI FAQ]
 
 == External resources ==
-* [http://www.x.org/wiki/ATIProprietaryDriver X.Org Wiki]
-* [http://wiki.cchtml.com/index.php/Gentoo_Installation_Guide Unofficial Wiki for the AMD Linux Driver - Gentoo Installation Guide]
+* [http://en.gentoo-wiki.com/wiki/Fglrx community wiki article]
 
 [[Category:Graphics Adapters]]
-[[Category:Binary kernel modules]]
