--- a/Kernel%2FUpgrade%2Fes.mw
+++ b/Kernel%2FUpgrade%2Fes.mw
@@ -1,250 +1,98 @@
 <languages />
 
-<div class="mw-translate-fuzzy">
-{{Metadata|abstract=Este artículo describe los pasos para actualizar a un nuevo núcleo.}}
-</div>
+{{Metadata|abstract=This article describes the steps to upgrade to a new kernel.}}
 
-<div class="mw-translate-fuzzy">
-Este artículo describe los pasos para actualizar a un nuevo [[Kernel/es|núcleo]].
-</div>
+This article describes the steps to upgrade to a new [[kernel]].
 
-<div class="mw-translate-fuzzy">
-== Instalación y utilización de un nuevo núcleo ==
-</div>
+== Installation ==
 
-La actualización del núcleo puede ser una buena idea cuando se instalan los fuentes. A veces se instalan los fuentes cuando se actualiza el sistema lanzando la siguiente orden:
-
-{{RootCmd|emerge --ask --update --deep --with-bdeps{{=}}y --newuse @world}}
-
-<div class="mw-translate-fuzzy">
-Desde luego se pueden instalar directamente utilizando la siguiente orden (reemplazar ''gentoo-sources'' por ''hardened-sources'' cuando se utilice un perfil hardened):
-</div>
-
-{{RootCmd|emerge --ask --update --deep --with-bdeps{{=}}y --newuse sys-kernel/gentoo-sources}}
-
-Al instalar unos nuevos fuentes del núcleo, no se le ofrece al usuario un nuevo núcleo. Es necesario construir e instalar un nuevo núcleo a partir de los nuevos fuentes y reiniciar el sistema para correr el nuevo núcleo.
-
-Construir un nuevo núcleo a partir de los nuevos fuentes es básicamente el mismo proceso que el construir un nuevo núcleo cuando se instala el sistema. La diferencia es que se puede partir de la configuración del anterior núcleo para crear la configuración del nuevo. El utilizar la antigua configuración evita que el usuario tenga que recorrer de nuevo todas las opciones del núcleo (como con {{c|make menuconfig}}).
-
-<div class="mw-translate-fuzzy">
-La configuración del núcleo se guarda en un archivo llamado {{Path|.config}} en el directorio en el que se almacenan los fuentes del núcleo. Un nuevo núcleo puede tener opciones o características que no tiene un núcleo anterior o puede que ya no tenga una característica u opción que el núcleo anterior aún conserva. La configuración del núcleo especifica si las características y opciones de un núcleo están habilitadas o no, quizá construidas en el propio núcleo o quizás como módulos que se pueden cargar bajo demandan una vez el núcleo está en funcionamiento. Por tanto, el fichero de configuración del nuevo núcleo puede tener nuevas entradas que el fichero de configuración del núcleo antiguo no tiene y también puede que no tenga ya entradas que aún están presentes en el núcleo anterior.
-</div>
-
-Para tratar con este tipo de cambios en el fichero de configuración, se necesita convertir el fichero de configuración del núcleo antiguo a una configuración que pueda utilizar el nuevo núcleo. Este artículo muestra cómo crear un nuevo núcleo a partir de los nuevos fuentes realizando la conversión adecuada de la configuración del núcleo antiguo.
-
-<div class="mw-translate-fuzzy">
-== Haga una copia de respaldo de la configuración del núcleo actual ==
-</div>
-
-Es recomendable hacer una copia de respaldo de la configuración del núcleo de modo que no se pierdan las configuraciones anteriores. Después de todo, muchos usuarios invierten una considerable cantidad de tiempo en averiguar la mejor configuración para el sistema y por tanto no quieren perder definitivamente esa información.
-
-Es fácil hacer una copia de respaldo de la configuración actual del núcleo:
-
-<div class="mw-translate-fuzzy">
-{{RootCmd|cd /usr/src/linux
-|cp .config ~/kernel-config-`uname -r`|}}
-</div>
-
-Asumiendo que el enlace simbólico a los núcleos del núcleo se ha definido correctamente, esto copia la configuración del núcleo actualmente utilizado al directorio de inicio de root, cambiando la configuración a {{Path|kernel-config-}} seguido de la versión del núcleo Linux que está corriendo actualmente.
+A kernel upgrade may be necessary when new kernel sources are installed after a system update or when you yourself install new kernel sources.
 
 == Configuration ==
 
-<div class="mw-translate-fuzzy">
-== Ajuste el enlace simbólico a los nuevos fuentes del núcleo ==
-</div>
+The configuration parallels that of the [[Kernel/Configuration|manual configuration]], since only the config file is reused. All steps are mentioned here again for the sake of completeness, for a more verbose explanation see the other article.
 
-El enlace simbólico {{Path|/usr/src/linux}} debe siempre apuntar al directorio que contiene los fuentes del nucleo en el que está corriendo. Esto se puede hacer de tres formas distintas:
+=== Set symlink ===
 
-# Instalar los nuevos fuentes del núcleo con  <code>USE="symlink"</code>
-# Ajustar el enlace con eselect
-# Actualizar el enlace simbólico de forma manual
+The symlink {{Path|/usr/src/linux}} should always point to the kernel sources that is currently being used. This can be done in one of three ways:
 
-<div class="mw-translate-fuzzy">
-=== Instalar los fuentes del núcleo con el ajustes USE para gestionar el enlace simbólico ===
-</div>
+; 1. Installing the kernel sources with active ''symlink'' [[USE flag]]
+: This will make the {{Path|/usr/src/linux}} point to your newly installed kernel sources. If necessary, it can still be modified later with the following two methods:
 
-Esto hará que {{Path|/usr/src/linux}} apunte a los nuevos fuentes del núcleo instalados.
+; 2. Setting the symlink with '''eselect''':
 
-En caso de ser necesario, se puede modificar más tarde utilizando uno de los otros dos métodos.
+: {{RootCmd| eselect kernel list |
+  |output=Available kernel symlink targets:<br /> &nbsp; [1] linux-3.3.8-gentoo *<br /> &nbsp; [2]   linux-3.4.9-gentoo}}
 
-<div class="mw-translate-fuzzy">
-=== Definir el enlace on eselect ===
-</div>
+: This outputs the available kernel sources. The asterisk indicates the chosen sources. To change the kernel sources, e.g. to the second entry, do:
 
-Para definir el enlace simbólico con {{c|eselect}}:
+: {{RootCmd|eselect kernel set 2}}
 
-{{RootCmd|eselect kernel list|output=<pre>
-Available kernel symlink targets:
- [1] linux-3.14.14-gentoo *
- [2] linux-3.16.3-gentoo
-</pre>}}
+; 3. Setting the symlink manually:
 
-Esto muestra los fuentes del núcleo disponibles. El asterisco indica los fuentes elegidos.
+: {{RootCmd|ln -sf /usr/src/linux-3.4.9 /usr/src/linux |
+  |ls -l /usr/src/linux |
+  |output=lrwxrwxrwx 1 root root 11 Aug 29 22:10 /usr/src/linux -> /usr/src/linux-3.4.9-gentoo}}
 
-Para cambiar los fuentes del núcleo, por ejemplo a la segunda entrada, se debe hacer los siguiente:
+=== Sanitize sources ===
 
-{{RootCmd|eselect kernel set 2}}
+If you are experiencing build problems while rebuilding the current kernel, it might help to sanitize the kernel sources. Make sure you backup the {{Path|.config}} file first, as the operation will remove it.
 
-<div class="mw-translate-fuzzy">
-=== Actuar manualmente el enlace simbólico ===
-</div>
+{{RootCmd|cp .config .config~
+|make distclean
+|mv .config~ .config}}
 
-Para definir el enlace simbólico manualmente:
+=== Copy previous kernel configuration ===
+The configuration from currently running kernel needs to be copied to the new one. It can be found in several places:
 
-<div class="mw-translate-fuzzy">
-{{RootCmd|ln -sf /usr/src/linux-3.16.3 /usr/src/linux
-|ls -l /usr/src/linux|output=<pre>
-lrwxrwxrwx 1 root root 19 Oct  4 10:21 /usr/src/linux -> linux-3.16.3-gentoo
-</pre>}}
-</div>
+* In the [[procfs]] filesystem, if the kernel option ''Enable access to .config through /proc/config.gz'' was activated in your present kernel:
 
-==== Moving to the new folder ====
-
-Now that the symbolic link has been modified, change the working directory to the new kernel folder.
-
-{{RootCmd|cd /usr/src/linux}}
-
-{{Note|This command is still necessary even if the working directory was already {{Path|/usr/src/linux}} when the symlink was modified. Until the new symlink is actually followed, the console will still be in the ''old'' kernel's directory.}}
-
-<div class="mw-translate-fuzzy">
-== Copiar la configuración del núcleo anterior ==
-</div>
-
-<div class="mw-translate-fuzzy">
-Se necesita copiar la configuración del núcleo antiguo al nuevo. Se puede encontrar en varios sitios:
-</div>
-
-<div class="mw-translate-fuzzy">
-* En el sistema de ficheros [[procfs]] si la opción del núcleo ''Enable access to .config through /proc/config.gz'' se activó en el núcleo actual:
 : {{RootCmd|zcat /proc/config.gz > /usr/src/linux/.config}}
-</div>
 
-* Desde el núcleo anterior. Esto funciona únicamente cuando el antiguo núcleo se compiló con CONFIG_IKCONFIG:
-: {{RootCmd|/usr/src/linux/scripts/extract-ikconfig /ruta/al/núcleo/anterior >/usr/src/linux/.config}}
+* In the {{Path|/boot}} directory, if you installed the config file there:
 
-* En el directorio {{Path|/boot}} si la configuración se instaló allí:
-: {{RootCmd|cp /boot/config-3.14.14-gentoo /usr/src/linux/.config}}
+: {{RootCmd|cp /boot/config-3.3.8-gentoo /usr/src/linux/.config}}
 
-* En el directorio del núcleo que está corriendo actualmente:
-: {{RootCmd|cp /usr/src/linux-3.14.14-gentoo/.config /usr/src/linux/}}
+* In the kernel directory of the currently-running kernel:
 
-* En el directorio {{Path|/etc/kernels/}}, si se ha definido <code>SAVE_CONFIG="yes"</code> en {{Path|/etc/genkernel.conf}} y se utilizó {{c|[[genkernel]]}}previamente:
-: {{RootCmd|cp /etc/kernels/kernel-config-x86_64-3.14.14-gentoo /usr/src/linux/.config}}
+: {{RootCmd|cp /usr/src/linux-3.3.8-gentoo/.config /usr/src/linux/}}
 
-<div class="mw-translate-fuzzy">
-== Configure el nuevo núcleo ==
-</div>
-
-Para utilizar la configuración del núcleo antiguo en el nuevo nucleo, se necesita convertir. La conversión se puede realizar bien usando {{c|make silentoldconfig}} o {{c|make olddefconfig}}. Utilice una u otra pero no ambas.
-
-<div class="mw-translate-fuzzy">
-=== make silentoldconfig ===
-</div>
-
-{{Important|{{c|make silentoldconfig}} is being removed as of linux version 4.19, it will be replaced by {{c|make syncconfig}}.}}
-
-La siguiente configuración es igual que la configuración basada en texto con {{c|make config}}. Para nuevas opciones de configuración, se pregunta al usuario para que decida la opción. Por ejemplo:
+=== make oldconfig ===
+Now update the previous config file for your new kernel:
 
 {{RootCmd|cd /usr/src/linux
-|make silentoldconfig|output=<pre>
-Anticipatory I/O scheduler (IOSCHED_AS) [Y/n/m/?] (NEW)
-</pre>}}
+|make oldconfig}}
 
-La cadena ''(NEW)'' al final de la línea, marca esta opción como nueva. A la izquierda de la cadena entre corchetes se muestran las posibles respuestas: ''Y''es (Sí), ''n''o (No), ''m''odule (Módulo) o ''?'' para mostrar la ayuda. La respuesta recomendada (esto es, la respuesta por defecto) se muestra en mayúsculas (en este caso: ''Y''). La ayuda describe la opción o el controlador.
+The following configuration parallels that of the text based configuration with '''make config'''. For every difference between the kernel versions, it asks if you want to activate the driver or feature. An example:
 
-Lamentablemente, {{c|make silentoldconfig}} no muestra, al lado de la ayuda, más información de cada opción, como el contexto, de modo que a veces es difícil elegir la respuesta adecuada. En este caso, la mejor forma de proceder es recordar el nombre de la opción y revisarla más tarde a través de alguna de las [[Kernel/Configuration/es#Herramientas de configuración|herramientas gráficas de configuración del núcleo]].
-
-<div class="mw-translate-fuzzy">
-=== make olddefconfig ===
-</div>
-
-Si se desea ajustar todas la opciones nuevas de configuración a sus valores recomendados (esto es, por defecto) utilizar {{c|make olddefconfig}}:
-
-{{RootCmd|cd /usr/src/linux
-|make olddefconfig}}
-
-<div class="mw-translate-fuzzy">
-=== make help ===
-</div>
-
-Utilizar {{c|make help}} para ver otros métodos de conversión que están disponibles:
-
-{{RootCmd|make help}}
-
-== Construcción ==
-
-<div class="mw-translate-fuzzy">
-{{Important|Cuando se instalan módulos del núcleo externos (como nvidia o zfs), puede que se necesite lanzar {{c|make modules_prepare}} tal y como se describe [[Kernel/Upgrade/es#Reinstalar_m.C3.B3dulos_externos_del_n.C3.BAcleo|abajo]] antes de construir el núcleo. Algunos módulos no se pueden instalar o preparar antes de construir el núcleo.}}
-</div>
-
-{{Important|No olvide reconfigurar el [[Bootloader|cargador de arranque]] para tener en cuenta los nuevos nombres de los ficheros del núcleo y también reconstruir el initramfs si se utilizó alguno.}}
-
-Para realizar este paso, siga lo indicado en el artículo de [[Kernel/Configuration/es#Construcción|configuración manual]].
-
-=== Automated build and installation ===
-
-It is possible to automatically build and install the newly emerged kernel using Portage hooks. While other approaches are also possible, the following is based on genkernel and gentoo-sources package. It requires the following prerequisites:
-
-# {{c|genkernel all}} is able to build and install the kernel to which the {{Path|/usr/src/linux}} symlink points into <code>$BOOTDIR</code> and the bootloader.
-# The <code>symlink</code> use flag is set for the kernel ebuild.
-
-If those are fulfilled, simply install a <code>post_pkg_postinst</code> Portage hook as shown below.
-
-{{FileBox|title=Automated kernel build and installation portage hook|filename=/etc/portage/env/sys-kernel/gentoo-sources|lang=bash|1=post_pkg_postinst() {
-	CURRENT_KV=$(uname -r)
-	# Check to see if genkernel has been run previously for the running kernel and use that config
-	if [[ -f "${EROOT}/etc/kernels/kernel-config-${CURRENT_KV}" ]] ; then
-		genkernel --kernel-config="${EROOT}/etc/kernels/kernel-config-${CURRENT_KV}" all
-	elif [[ -f "${EROOT}/usr/src/linux-${CURRENT_KV}/.config" ]] ; then # Use latest kernel config from current kernel
-		genkernel --kernel-config="${EROOT}/usr/src/linux-${CURRENT_KV}/.config" all
-	elif [[ -f /proc/config.gz ]] ; then # Use known running good kernel
-		zcat /proc/config.gz >> "${EROOT}/tmp/genkernel.config"
-		genkernel --kernel-config="${EROOT}/tmp/genkernel.config" all
-		rm "${EROOT}/tmp/genkernel.config"
-	else # No valid configs known
-		genkernel all
-	fi
-}
+{{RootCmd|make oldconfig
+|output=Anticipatory I/O scheduler (IOSCHED_AS) [Y/n/m/?] (NEW)
 }}
 
-<div class="mw-translate-fuzzy">
-== Reinstalar módulos externos del núcleo ==
-</div>
+The string ''(NEW)'' at the end of the line marks this option as new. Left to the string in square brackets are the possible answers: ''Y''es, ''n''o, ''m''odule or ''?'' to show the help. The recommend answer is capitalized (here ''Y''). The help explains the option or driver.
 
-{{Note|The modules_prepare step is not required if building an entire kernel as this function is done as part of the standard process.}}
+Unfortunately '''make oldconfig''' doesn't show - next to the help - a lot more information for each option, like the context, so that it is sometimes difficult to give the right answer. In this case the best way to go is to remember the option name and revise it afterwards through one of the [[Kernel/Configuration#Configuration tools|graphical kernel configuration tools]].
 
-Cualquier módulo externo del núcleo como los [[:Category:Binary kernel modules|módulos binarios del núcleo]], necesitan reconstruirse cada vez que se actualiza el núcleo. Si todavía no ha construido su núcleo deberá prepararse en primer lugar para la construcción de los módulos externos del núcleo:
+== Reinstall external kernel modules ==
+
+Any external kernel modules, such as [[:Category:Binary kernel modules|binary kernel modules]], need to be rebuilt for each new kernel. If the kernel hasn't been built yet, it has to first be prepared for the building of the external kernel modules:
 
 {{RootCmd|make modules_prepare}}
 
-Los paquetes que contienen módulos se pueden reconstruir utilizando el conjunto <code>@module-rebuild</code>:
+You can rebuild the packages using the ''@module-rebuild'' set:
 
 {{Emerge|@module-rebuild}}
 
-<div class="mw-translate-fuzzy">
-== Resolver problemas en la construcción ==
-</div>
+== Build ==
 
-Cuando tenga problemas mientras está reconstruyendo el núcleo actual, podría ser de utilidad sanear los ficheros fuente del núcleo. Asegúrese de hacer una copia de respaldo del fichero {{Path|.config}} ya que esta operación lo eliminará. Asegúrese de no utilizar los sufijos {{Path|.bak}} o {{Path|~}} como indicadores de copia de respaldo ya que {{c|make distclean}} también los eliminará.
+For this step, follow the steps in the [[Kernel/Configuration#Build|manual configuration]] article.
 
-{{RootCmd|cp .config /usr/src/kernel_config_bk
-|make distclean
-|mv /usr/src/kernel_config_bk .config}}
+== Removing old kernels ==
 
-<div class="mw-translate-fuzzy">
-== Eliminar núcleos antiguos ==
-</div>
+See the [[Kernel/Removal|kernel removal]] article. 
 
-Lea el artículo sobre la [[Kernel/Removal/es|eliminación del núcleo]]. 
+== External resources ==
 
-== See also ==
-
-* {{See also|Genkernel}}
-
-== Recursos externos ==
-
-<div class="mw-translate-fuzzy">
-* [http://kernelnewbies.org/LinuxChanges Registro de cambios del núcleo con algunas explicaciones de nuevas características]
-</div>
+* [http://kernelnewbies.org/LinuxChanges kernel changelog with some explanations of new features]
 
 [[Category:Kernel]]
