Created page with "Núcleo/Eliminación"

--- a/Kernel%2FRemoval%2Fes.mw
+++ b/Kernel%2FRemoval%2Fes.mw
@@ -1,53 +1,51 @@
 <languages />
 
-{{Metadata|abstract=Este artículo describe la eliminación de núcleos antiguos.}}
+{{Metadata|abstract=This article describes the removal of old kernels.}}
 
-Este artículo describe la eliminación de [[kernel/es|núcleos]] antiguos
+This article describes the removal of old [[kernel]]s.
 
-== Eliminar los fuentes del núcleo ==
+== Removing kernel sources ==
 
-Después de instalar un nuevo núcleo y comprobar que  funciona correctamente , el núcleo antiguo se puede eliminar. Para eliminar los fuentes del núcleo antiguo. se puede utilizar la opción ''-depclean'' (la forma corta es ''-c'') para eliminar todas las versiones que no se están utilizando de un paquete ranurado (slotted) por ejemplo {{Package|sys-kernel/gentoo-sources}}.
+After a new kernel is installed and if it works satisfactorily, the old kernel can be removed. To remove the old kernel sources, emerge's ''--depclean'' option (short form ''-c'') can be used to remove all old or unused versions of a slotted package, e.g. for {{Package|sys-kernel/gentoo-sources}}.
 
 {{Emerge|params+=--depclean|gentoo-sources}}
 
-Asegúrese de comprobar que no está eliminando los fuentes de núcleo que está corriendo actualmente. (Lea el artículo sobre la [[Kernel/Upgrade/es|actualización del núcleo]] para saber como realizar una actualización).
+Be sure to verify that it is not removing the sources for the currently running kernel. (See [[Kernel/Upgrade|kernel upgrade]] article on how to upgrade.)
 
-=== Proteger los fuentes del núcleo ===
+=== Protecting kernel sources ===
 
-Si ha instalado nuevos fuentes del núcleo y lanza ''--depclean'' antes de cambiar a los nuevos fuentes, los fuentes actuales se eliminarán. Seguramente no deseará este cambio si va a trabajar con los fuentes actuales ya que puede necesitarlos, por ejemplo, para actualizar módulos externos del núcleo,. Es por tanto una buena práctica añadir la versión específica del núcleo a su fichero world para protegerlo de las operaciones ''--depclean''.
+If newer kernel sources has been merged and you run ''--depclean'' before switching to the newer sources, the current sources will be removed. But if you want to stay with the current sources, this removal is not wanted, because you may need the sources e.g. for updating external kernel modules. It's therefore good practice to add the specific kernel version to your world file to protect it from ''--depclean'' operations.
 
 {{Emerge|params+=--noreplace|gentoo-sources:3.3.8}}
 
-Observe la notación para las ranuras (slots), en la que se utilizan los dos puntos en lugar del guión. Cada versión del núcleo está en su propia ranura.
+Note the slot notation, using a colon instead of a dash. Every kernel version is its own slot.
 
-<div class="mw-translate-fuzzy">
-== Eliminar los sobrantes del núcleo ==
-</div>
+== Remove kernel leftovers ==
 
-=== Usar eclean-kernel ===
+=== Using eclean-kernel ===
 
-La simple herramienta {{Package|app-admin/eclean-kernel}} se utiliza para la eliminación y limpieza de versiones antiguas del núcleo. Ésta elimina tanto los ficheros construidos como los directorios necesarios para la construcción si no se referencian desde ningún otro núcleo que se conserve.
+{{Package|app-admin/eclean-kernel}} is a simple tool for old kernel cleanup/removal. It removes both built kernel files and build directories if they're no longer reference by any preserved kernel.
 
-Por ejemplo, para mantener los últimos tres núcleos:
+For example, to keep three newest kernels around:
 
 {{RootCmd|eclean-kernel -n 3}}
 
-=== Eliminación manual ===
+=== Manual removal ===
 
-Portage sin embargo solo elimina los ficheros que instaló. Los ficheros generados durante la construcción del núcleo y su instalación, permanecerán en el sistema de ficheros. Se pueden eliminar sin problemas.
+Portage however only removes the files it installed - the files generated during the kernel build and installation remain. They can be safely removed.
 
-* Cuando se construye un núcleo en el directorio con los fuentes, los ficheros generados durante este proceso se conservan y Portage no los eliminará:
+* When a kernel is built in the source directory, files generated during the build process remain, and are not removed by Portage:
 
 : {{RootCmd|rm -r /usr/src/linux-3.X.Y}}
 
-* Durante la configuración del núcleo, los módulos se copian a un subdirectorio de {{Path|/lib/modules}}:
+* During kernel setup, the kernel modules are copied to a sub directory of <tt>/lib/modules/</tt>:
 
 : {{RootCmd|rm -r /lib/modules/3.X.Y}}
 
-* Se pueden eliminar también los ficheros antiguos en {{Path|/boot}}:
+* The old files in {{Path|/boot}} can also be removed:
 
-: {{RootCmd|rm /boot/vmlinuz-3.X.Y|rm /boot/System.map-3.X.Y|rm /boot/config-3.X.Y}}
+: {{RootCmd|rm /boot/kernel-3.X.Y|rm /boot/System.map-3.X.Y|rm /boot/config-3.X.Y}}
 
-* Por último, elimine todas las entradas sobrantes de su fichero de configuración del cargador de arranque.
+* Lastly, remove all leftover entries from your bootloader's config file.
 
 [[Category:Kernel]]
