Created page with "Núcleo/Configuración"

--- a/Kernel%2FConfiguration%2Fes.mw
+++ b/Kernel%2FConfiguration%2Fes.mw
@@ -1,232 +1,146 @@
 <languages />
 
-{{Metadata|abstract=Este artículo describe la configuración manual y la puesta en marcha del núcleo Linux. Para el método automático consulte el artículo de genkernel.}}
+{{Metadata|abstract=This article describes the manual configuration and setup of the Linux kernel. For an authomatic method, see the genkernel article.}}
 
-<div class="mw-translate-fuzzy">
-Este artículo describe la configuración manual y la puesta en marcha del [[Kernel/es|núcleo Linux]]. Para el método automático consulte el artículo de [[genkernel/es|genkernel]].
-</div>
+This article describes the manual configuration and setup of the [[Kernel|Linux kernel]]. For an automatic method see the [[genkernel]] article.
 
-== Ajustar el enlace simbólico ==
+== Set symlink ==
 
-<div class="mw-translate-fuzzy">
-El enlace simbólico {{Path|/usr/src/linux}} debe apuntar siempre a los fuentes del núcleo que se está utilizando actualmente. Esto se puede hacer de tres formas:
-</div>
+The symlink {{Path|/usr/src/linux}} should always point to the kernel sources that is currently being used. This can be done in one of three ways:
 
-1. Instalar los fuentes del núcleo con el [[USE flag|ajuste USE]] <code>symlink</code> activo. Esto hará que  {{Path|/usr/src/linux}} apunte a los nuevos fuentes del núcleo instalado. En caso necesario se puede modificar más tarde mediante los siguientes dos métodos:
+; 1. Installing the kernel sources with active ''symlink'' [[USE flag]]
+: This will make the {{Path|/usr/src/linux}} point to your newly installed kernel sources. If necessary, it can still be modified later with the following two methods:
 
-2. Ajustar el enlace simbólico con la herramienta {{c|eselect}}:
+; 2. Setting the symlink with '''eselect''':
 
-{{RootCmd|eselect kernel list|output=<pre>
-Available kernel symlink targets:
-[1] linux-3.3.8-gentoo
-[2] linux-3.4.9-gentoo
-</pre>}}
-
-Esto muestra los fuentes del núcleo disponibles. El asterisco indica los fuentes seleccionados. Para cambiar estos fuentes, por ejemplo, a la segunda entrada, haga lo siguiente:
-
-{{RootCmd|eselect kernel set 2}}
-
-3. Ajustar el enlace simbólico manualmente:
-
-{{RootCmd|ln -sf /usr/src/linux-3.4.9-gentoo /usr/src/linux |
-|ls -l /usr/src/linux |
-|output=<pre>lrwxrwxrwx 1 root root 11 Aug 29 22:10 /usr/src/linux -> /usr/src/linux-3.4.9-gentoo</pre>
+: {{RootCmd| eselect kernel list |
+  |output=Available kernel symlink targets:<br/> &nbsp; [1] linux-3.3.8-gentoo *<br/> &nbsp; [2] linux-3.4.9-gentoo
 }}
 
-<!-- La salida es la misma que el fichero destino en la orden ln. -->
+: This outputs the available kernel sources. The asterisk indicates the chosen sources. To change the kernel sources, e.g. to the second entry, do:
 
-== Herramientas de configuración ==
+: {{RootCmd|eselect kernel set 2}}
 
-El núcleo ofrece varias herramientas para configurarlo.
+; 3. Setting the symlink manually:
 
-<div class="mw-translate-fuzzy">
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="15%" | Orden
-! Descripción
-|-
-| {{c|make config}}
-| Configuración basada en texto. Las opciones se solicitan una a continuación de otra. Se necesita responder a todas las opciones y no es posible acceder a las opciones en un orden distinto al que se muestran.
-|-
-| {{c|make menuconfig}}
-| Un menú pseudográfico basado en ncurses (solo entrada en modo texto). Se puede navegar por el menú para modificar las opciones deseadas.
-|-
-| {{c|make defconfig}}
-| Genera una nueva configuración con el valor por defecto para ARCH suministrado por el fichero de configuración por defecto. Utilice esta opción para volver a las opciones que se incluyen con los fuentes.
-|-
-| {{c|make nconfig}}
-| Menú pseudográfico basado en ncurses. Requiere tener instalado {{Package|sys-libs/ncurses}}.
-|-
-| {{c|make xconfig}}
-| Menú gráfico que utiliza Qt4. Requiere tener instalado {{Package|dev-qt/qtgui}}.
-|-
-| {{c|make gconfig}}
-| Menú gráfico que utiliza GTK+. Requiere tener instalados {{Package|x11-libs/gtk+}}, {{Package|dev-libs/glib}} y {{Package|gnome-base/libglade}}.
-|-
-| {{c|make oldconfig}}
-| Revisa los cambios realizados entre versiones del núcleo y actualiza la configuración para crear un nuevo fichero {{Path|.config}} para el núcleo.
-|-
-| {{c|make allyesconfig}}
-| Habilita todas las opciones de configuración en el núcleo. Definirá ''todas'' las opciones del núcleo a <code>*</code>. ¡Asegúrese de tener una copia de seguridad de la configuración actual del núcleo antes de utilizar este modo de forma experimental!
-|}
-</div>
+: {{RootCmd|ln -sf /usr/src/linux-3.4.9-gentoo /usr/src/linux |
+  |ls -l /usr/src/linux |
+  |output=lrwxrwxrwx 1 root root 11 Aug 29 22:10 /usr/src/linux -> /usr/src/linux-3.4.9-gentoo}}
+<!-- The output is the same as the target file in the ln command. -->
 
-También existen varios guiones para crear configuraciones por defecto de distintos tipos. Esto puede hacer que las configuración más complejas se realicen en menos tiempo. Lance la siguiente orden para mostrar una lista completa de las opciones de make:
+== Configuration tools ==
+
+The kernel offers several tools to configure itself:
+
+; '''make config'''
+: Text based configuration. The options are prompted one after another. All options need to be answered, and out-of-order access to former options is not possible.
+
+; '''make menuconfig'''
+: Graphical menu (only text input). You can navigate through the menu and change the options you want.
+
+; '''make nconfig'''
+: Graphical menu based on ncurses. Requires {{Package|sys-libs/ncurses}} to be installed.
+
+; '''make xconfig'''
+: Graphical menu using Qt4. Requires {{Package|dev-qt/qtgui}} to be installed.
+
+; '''make gconfig'''
+: Graphical menu using GTK+. Requires {{Package|x11-libs/gtk+}}, {{Package|dev-libs/glib}} and {{Package|gnome-base/libglade}} to be installed.
+
+; '''make oldconfig'''
+: Review changes between kernel versions and update to create new {{Path|.config}} for kernel.
+
+
+There are also several scripts to create miscellaneous default configurations. See:
 
 {{RootCmd|make help}}
 
-== Configuración ==
+== Configuration ==
 
-Este artículo describe la configuración mediante la herramienta {{c|make menuconfig}}, sin embargo, el procedimiento es similar para los otros menús.
+This article describes the configuration using '''make menuconfig''', but the procedure is similar for the other menus.
 
 {{RootCmd|cd /usr/src/linux
 |make menuconfig}}
 
-=== Utilización ===
+=== Usage ===
 
-En el menú mostrado, la barra azul indica la posición del cursor. Puede cambiar esta posición con las teclas de movimiento del cursor {{Key|↑}} y {{Key|↓}}. La teclas de movimiento del cursor {{Key|←}} y {{Key|→}} expanden la barra de menú hacia abajo y definen lo que ocurre cuando se pulsa la tecla {{Key|Intro}}. Para la barra de menú de abajo, '''Select''' cambia a un submenú de las entradas de menú que terminan en '''--->''' mientras que  '''Exit''' sale de un submenú. Como alternativa, se puede pulsar la tecla {{Key|Esc}} dos veces para salir de la aplicación.
+In the shown menu the blue bar indicates your position. With the arrow keys {{Key|up}} and {{Key|down}} you can change the position. The arrow keys {{Key|left}} and {{Key|right}} traverse the menu bar in the bottom and define what happens when you hit the {{Key|Enter}} key. '''Select''' switches to a sub menu - the menu entries ending with ''--->'' - , while '''Exit''' exits a sub menu. As an alternative you can also hit the {{Key|Esc}} key twice.
 
-Al pulsar una tecla asociada a una letra {{Key|A}}-{{Key|Z}} se moverá la posición del cursor a las líneas que tienen estos caracteres en negrita. Las teclas {{Key|Y}}, {{Key|M}} y {{Key|N}} se excluyen de esta forma de navegación ya que se utilizan para otros propósitos. Si una línea comienza por una Y, M  o N, el siguiente carácter se mostrará en negrita y se podrá saltar a esa línea. Por ejemplo, relativo a la posición actual del cursor, si la siguiente línea muestra "N'''e'''twork Device Support --->", al pulsar la tecla {{Key|E}}, se moverá el cursor a esa línea.
+Menu entries, which start with brackets, are drivers or features which can be activated:
 
-Los siguientes símbolos pueden aparecer al comienzo de las entradas en los menús:
+; [ ], [*]
+: Options in square brackets can be activated or deactivated. The asterisk marks the menu entry as activated. You change the value with the {{Key|space}} key or press {{Key|Y}} ('''Y'''es) to activate or {{Key|N}} ('''N'''o) to deactivate the entry.
+: Is the option is activated, the chosen driver will be built into the kernel and will always be available at boot time.
 
-{| class="table table-striped table-condense"
-|-
-! scope="col" width="15%" | Símbolo(s)
-! Descripción
-|-
-| <code>[ ], [*]</code>
-| Las opciones entre corchetes se pueden activar o desactivar. El asterisco marca la entrada de menú como activada. El valor se puede cambiar con la tecla  {{Key|espacio}}. También se puede pulsar la tecla {{Key|Y}} ('''Y'''es) para activarla o la tecla {{Key|N}} ('''N'''o) para desactivar la entrada seleccionada.
-<br />
-Si la opción está activada, la característica o el controlador seleccionado se construirá como parte del núcleo y estará siempre disponible desde el inicio del sistema.
-|-
-| <code>< >, <M>, <*></code>
-| Las opciones entre los símbolo menor que y mayor que se pueden activar o desactivar pero también se pueden activar como módulo (indicado con una ''M''). Los valores se pueden modificar pulsando la la teclas {{Key|Y}}/{{Key|N}} como se describe arriba o pulsando la tecla {{Key|M}} para activar esa característica o controlador como un módulo.
-<br />
-Lea el artículo sobre los [[Kernel Modules|módulos del núcleo]] para conocer la diferencia con más detalle.
-|-
-| <code>{M}, {*}</code>
-| Las opciones entre llaves se pueden activar para ser construidas como parte del núcleo o como módulo pero no se pueden desactivar. Esto es debido a que otro controlador depende de esta característica.
-|-
-| <code>-M-, -*-</code>
-| Las opciones entre guiones las activan de la forma mostrada otros controladores. No hay elección para ellas.
-|}
+; < >, <M>, <*>
+: Options in angle brackets can be activated or deactivated, but also activated as module (indicated by a ''M''). You change the value as before and press key {{Key|M}} for activate as module.
+: See the [[Kernel Modules]] article for differentiation.
 
-Más aún, algunas entradas de menú tienen una etiqueta al final:
+; {M}, {*}
+: Options in curly brackets can be activated or activated as module but not be deactivated, because another driver needs this activated in either way.
 
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="15%" | Etiqueta
-! Descripción
-|-
-| <code>(NEW)</code>
-| Este controlador es nuevo en el núcleo y probablemente no sea del todo estable.
-|-
-| <code>(EXPERIMENTAL)</code>
-| Este controlador es experimental y seguramente no será del todo estable.
-|-
-| <code>(DEPRECATED)</code>
-| Este controlador es obsoleto y no es necesario en la mayoría de los sistemas.
-|-
-| <code>(OBSOLETE)</code>
-| Este controlador es obsoleto y no se debería activar.
-|}
+; -M-, -*-
+: Options between hyphens are activated in the shown way by another driver. There is no choice.
 
-La mayoría de las opciones tienen una descripción que se puede ver pulsando la tecla {{Key|H}} o eligiendo '''Help''' en la barra de menú.
 
-=== Selección de controladores ===
+Furthermore some menu entries have a tag at the end:
 
-Eche un vistazo al artículo sobre [[hardware detection|detección del hardware]] y a los artículos en la categoría [[:Category:Hardware|Hardware]].
+; (NEW)
+: This driver is new in the kernel and is maybe not stable enough.
 
-=== Buscar módulos ===
+; (EXPERIMENTAL)
+: This driver is experimental and most likely not stable enough.
 
-Dentro de <code>menuconfig</code> utilice la tecla {{Key|/}} para buscar módulos por su nombre.
+; (DEPRECATED)
+: This driver is deprecated and not needed for most systems.
 
-Tal y como se muestra abajo, el resultado de la búsqueda mostrará números delante de los resultados. Si se pulsa {{Key|1}} en el ejemplo de abajo {{c|make menuconfig}} saltará hasta la opción ''Bluetooth device drivers'' en la estructura del menú.
+; (OBSOLETE)
+: This driver is obsolete and should not be activated.
 
-{{KernelBox|title=Salida ejemplo después de buscar  HCIBTUSB|1=
-Symbol: BT_HCIBTUSB [{{=}}m]                       
-Type  : tristate                               
-Prompt: HCI USB driver                         
-  Location:                                    
-    -> Networking support (NET [{{=}}y])           
-      -> Bluetooth subsystem support (BT [{{=}}y]) 
-(1)     -> Bluetooth device drivers            
-  Defined at drivers/bluetooth/Kconfig:5       
-  Depends on: NET [{{=}}y] && BT [{{=}}y] && USB [{{=}}m]
-}}
 
-=== Habilitar los ajustes comunes de Gentoo Linux ===
+Most options have a description, which get by pressing the {{Key|H}} key or choose in the menu bar '''Help'''.
 
-Existe una opción de configuración del núcleo llamada <var>CONFIG_GENTOO_LINUX</var> que se encuentra disponible únicamente en {{Package|sys-kernel/gentoo-sources}} y otros núcleos mantenidos por [[Project:Kernel|el proyecto del núcleo]]. Por sí misma no hace nada, sin embargo define algunas opciones de configuración que necesitan las instalaciones típicas.
+=== Driver selection ===
 
-Este ajuste selecciona automáticamente el soporte para <code>tmpfs</code> y <code>devtmpfs</code> que es necesario para gestionar {{Path|/dev}} en Gentoo Linux. En el futuro puede que se expanda para permitir otros ajustes obligatorios en un sistema Gentoo Linux. Para más información, lea la ayuda disponible en el sistema de configuración del núcleo del sistema tal y como se describió antes en esta guía.
+See the [[hardware detection]] article and the articles in the [[:Category:Hardware|Hardware]] category.
 
-== Construcción ==
+=== Search modules ===
+Within ''menuconfig'', you can use {{Key|/}} to search modules by name.
 
-Después de haber realizado correctamente la configuración, compile el núcleo:
+=== Enabling Gentoo Linux common settings ===
+
+There is a kernel configuration option called <code>CONFIG_GENTOO_LINUX</code> only present in {{Package|sys-kernel/gentoo-sources}} and other [[Project:Kernel|Kernel Project]] maintained kernels. It does nothing on its own, but sets various required configuration options for typical installations.
+
+This setting automatically selects tmpfs and devtmpfs support, which are needed for handling {{Path|/dev}} on Gentoo Linux, but might be expanded in the future to enable other mandatory settings for a Gentoo Linux system. For more information, read the help information available through the kernel configuration system as described earlier in this guide.
+
+== Build ==
+
+After configuring the kernel you have to compile it:
 
 {{RootCmd|make}}
 
-En sistemas con procesadores con varios núcleos (cores), se debe intentar conseguir que trabajen todos. Añada la opción <code>-j(<NÚMERO_DE_NÚCLEOS> + 1)</code>. Por ejemplo, un procesador de doble núcleo contiene dos núcleos lógicos más uno (2 + 1):
+If you have a processor with multiple cores, you can let all the cores do the work. For this add the parameter '''-j(NUMBER_CORES +1)'''. For a dual core processor:
 
 {{RootCmd|make -j3}}
 
-Un sistema con cuatro núcleos contiene cuatro núcleos lógicos más uno (4 + 1):
+== Setup ==
 
-{{RootCmd|make -j5}}
-
-== Configuración ==
-
-Si se activaron controladores como módulos, se deberían instalar:
+If activated drivers as modules, you have to install them:
 
 {{RootCmd|make modules_install}}
 
-Los módulos se copiarán a un directorio de {{Path|/lib/modules}}.
+The modules will be copied to a sub directory of {{Path|/lib/modules}}.
 
-Para instalar el núcleo:
+To install the actual kernel:
 
 {{RootCmd|make install}}
 
-Esta orden lanza {{Path|/sbin/installkernel}}, que es parte del paquete {{Package|sys-apps/debianutils}}. ''El nuevo núcleo se instala en {{Path|/boot/vmlinuz-{versión}}}. Si ya existe un enlace simbólico {{Path|/boot/vmlinuz}} éste se refresca haciendo un enlace simbólico desde  {{Path|/boot/vmlinuz}} al nuevo núcleo y el núcleo previamente instalado estará disponible como {{Path|/boot/vmlinuz.old}}.'' ([[man page|Página del manual]] de ''installkernel''). Ocurre lo mismo para los ficheros {{Path|config}} y {{Path|System.map}}. Estos enlaces simbólicos son muy útiles ya que apunta siempre al último núcleo que se ha construido sin necesidad de cambiar la ruta a los ficheros (por ejemplo, se pueden utilizar en la configuración del cargador de arranque).
+This command executes '''/sbin/installkernel''', which is part of the {{Package|sys-apps/debianutils}} package. ''The new kernel is installed into {{Path|/boot/vmlinuz-{version}}}. If a symbolic link {{Path|/boot/vmlinuz}} already exists, it is refreshed by making a link from {{Path|/boot/vmlinuz}} to the new kernel, and the previously installed kernel is available as {{Path|/boot/vmlinuz.old}}.'' (''installkernel'' [[man page]]). The same for {{Path|config}} and {{Path|System.map}} files. These symlinks are handy, because they point always to the newest kernel without changing the file path (e.g. you can use them in the bootloader configuration).
 
-== Cargador de arranque ==
+== Bootloader ==
 
-Cambie la configuración del [[bootloader|cargador de arranque]] del sistema para que inicie el nuevo núcleo.
+Change your [[bootloader]] configuration to pick up at boot the new kernel.
 
-Por último reinicie el sistema para que utilice el núcleo nuevo.
-
-== Comparar la configuración actual del núcleo con la configuración por defecto ==
-
-Utilice el siguiente procedimiento para tener una visión general de los ajustes de configuración del núcleo que se desvían de la configuración por defecto. Recuerde que la modificación de un ajuste en la configuración puede conllevar ajustes de configuración adicionales.
-
-{{RootCmd
-|cd /usr/src/linux
-|cp .config ../.config.working
-|make defconfig
-|mv .config ../.config.default
-|cp ../.config.working .config
-|cd ..
-|/usr/src/linux/scripts/diffconfig .config.working .config.default > .config.diff
-}}
-
-La función de búsqueda en {{c|make menuconfig}} se puede utilizar para buscar los símbolos y sus interpretaciones.
-Cuando haya terminado, limpie:
-
-{{RootCmd
-|cd /usr/src/
-|rm .config.working .config.default .config.diff
-}}
-
-<div class="mw-translate-fuzzy">
-== Veáse también ==
-* [[Genkernel/es]]
-* [[Kernel/Configuration/Kernel_Seeds|Kernel Seeds]]
-* [[Kernel/Gentoo Kernel Configuration Guide/es|Guía de configuración del núcleo en Gentoo ]]
-</div>
-
-* {{See also|Genkernel}}
-* {{See also|Kernel/Configuration/Kernel_Seeds}}
-* {{See also|Kernel/Gentoo Kernel Configuration Guide}}
+Finally restart your system with the new kernel.
 
 [[Category:Kernel]]
